Finished UnsignedInteger class
- Moved uint128_t to UnsignedInteger<N>
- Finished implementing all operators for UnsignedInteger
- Wrote all tests for UnsignedInteger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ set(INC_DIR "include")
 set(
 	SOURCES
 	${INC_DIR}/${CMAKE_PROJECT_NAME}/libprecision.hpp
-	${INC_DIR}/${CMAKE_PROJECT_NAME}/types/uint128_t.hpp
-	${SRC_DIR}/${CMAKE_PROJECT_NAME}/types/uint128_t.cpp
+	${INC_DIR}/${CMAKE_PROJECT_NAME}/types/UnsignedInteger.hpp
+	${SRC_DIR}/${CMAKE_PROJECT_NAME}/types/blergh.cpp
 )
 
 add_library(${CMAKE_PROJECT_NAME} ${SOURCES})
